# Agar.IQ

./: README.md  settings
build-Agario_server-Desktop_Qt_5_15_2_MSVC2015_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-Agario_server-Desktop_Qt_5_15_2_MSVC2015_64bit-Debug/debug/: Agario_server.ilk  moc_predefs.h  moc_server.cpp
client/: Agario.pro  Agario.pro.user.122354c  CMakeLists.txt  db.sqlite  resource.qrc
client/Include/: answers.h  bot.h  entity.h  login.h  mainwindow.h  player.h  question.h  scene.h  settingswindow.h  worker.h
client/Src/: bot.cpp  entity.cpp  login.cpp  main.cpp  mainwindow.cpp  player.cpp  question.cpp  scene.cpp  settingswindow.cpp  worker.cpp
client/Ui/: login.ui  mainwindow.ui  scene.ui  settingswindow.ui
client/include/: EjectedFood.h  Element.h  ElementsFactory.h  Food.h  Game.h  GameWindow.h  Map.h  MovingElement.h  Player.h
client/src/: EjectedFood.cpp  Element.cpp  ElementsFactory.cpp  Food.cpp  Game.cpp  GameWindow.cpp  Map.cpp  MovingElement.cpp  Player.cpp
db/: Agario.pro
db/Include/: entity.h  food.h  question.h  scene.h
db/Src/: scene.cpp
db/Ui/: login.ui  mainwindow.ui
mvp/: Agario.pro  answers.cpp  answers.h  entity.cpp  entity.h  food.cpp  food.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  question.cpp  question.h  scene.cpp  scene.h  scene.ui  settings.h  settings.ui  settingswindow.cpp  worker.cpp  worker.h
mvp/Include/: answers.h  entity.h  food.h  mainwindow.h  player.h  scene.h  settingswindow.h  worker.h
mvp/Src/: answers.cpp  entity.cpp  food.cpp  main.cpp  mainwindow.cpp  player.cpp  question.cpp  scene.cpp  worker.cpp
mvp/Ui/: scene.ui  settingswindow.ui
mvp/include/: answers.h  entity.h  food.h  mainwindow.h  player.h  scene.h  settingswindow.h  worker.h
mvp/src/: answers.cpp  entity.cpp  food.cpp  mainwindow.cpp  player.cpp  question.cpp  scene.cpp  worker.cpp
mvp/ui/: mainwindow.ui
server/: Agario_server.pro  answer.cpp  answer.h  bot.cpp  bot.h  entity.cpp  entity.h  food.cpp  food.h  main.cpp  player.cpp  player.h  question.cpp  question.h  scene.cpp  scene.h  server.cpp  server.h  settingswindow.h
